# campeones_analysis

./: .gitignore  .graphifyignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  README.md  check_bids.py  conda-lock.yml  data.dvc  environment.yml  get_ar_params.py  hoja_de_marcados.md  interactive_qa_viewer.py  mkdocs.yml  noxfile.py  project_checklist.md  pyproject.toml  requirements.txt  run_validation_pipeline.ps1  setup.py  test_autoreject.py  test_correct_mode.py  test_mne_drops.py
.cursor/rules/: automation.mdc  env.mdc  git.mdc  structure.mdc  style.mdc  tests.mdc
.dvc/: config
.github/workflows/: ci.yml  gh-pages.yml
.hypothesis/constants/: 013d50990a3118c2  08c61fea9fddf659  0f883b296c8f5120  12cb3629318d2e4c  17739f585efaaa16  2235a3c5593d0e10  2fe1ca37243331fa  318cae2c547cf1e5  3ba66f60c1f39f86  5b664fc76074cbea  5e3d4be42070da62  67c6eff079cd0f1f  717f3cdfaf0945a4  7517bb5206a2d24c  7a62265de855f972  802b2cf994cbe616  809e77a71cfba107  80e7d4eb9046c81c  90e4e26b6921ff51  9d9947a47684f195  a763d4b374fbc09b  aac8e6d56e98b6c5  ac530860eeeb67c2  b2d304dfccd228a8  b361d0b07c230a3e  b88e413eac40c976  b98b093e372237cd  bd58174a5f508ba4  c9061a3a77621b7e  ca96f90aa77ce728  cf3b8916627c6bc3  dc5bae52a7acf687  e57ecdeb922aa84c  ec2f3c4565108225  edd789b1ccb9b0b8  f070a3b160323882  f5cb1a27cdc6191a
.kiro/steering/: edit-markdown-docs.md
data/derivatives/: dataset_description.json  participants.tsv
data/raw/: dataset_description.json  participants.json
data/sourcedata/: questionnaire-during.csv  questionnaire-post.csv  questionnaire-pre.csv
docs/: 04_preprocessing_eeg_review.md  README.md  arquitectura_datos.md  correct_file_mode.md  event_id_mapping_implementation.md  index.md  preprocessing_log.md  script_consistency_review.md  scripts_preprocessing.md  testing_new_subjects.md  tests.md
info/recipe/: conda_build_config.yaml  meta.yaml
info/test/: run_test.bat
research_diary/: 03_04_diario_tareas.md  03_1_diario_tareas.md  03_1_diario_tareas_analisis.md  03_2_diario_tareas.md  03_2_tareas_post_reunion_diego.md  03_3_diario_tareas.md  04_1_diario_tareas.md  04_2_diario_tareas.md  04_3_diario_tareas.md  04_4_diario_tareas_.md  04_tareas_post_reunion_diego.md  2026-01-28_progress_report.html  2026-01-28_progress_report.md  W1.txt  W2.txt  W3&4.txt  W3,4,5.txt  W3.txt  baseline_models_analysis.md  change_classifier_results.md  delta_luminance_results.md  eeg_qa_autoreject_analysis.md  erp_analysis_results.md  pca_sweep_results.md  raw_tde_model_analysis.md  tfr_comparison_results.md
research_diary/W1/: 19-05-2025.md  20-05-2025.md
research_diary/W2/: W2.txt
research_diary/context/: brightness_loso.py  meeting_2026-04-X.pptx
research_diary/deprecated/: baseline_models_analysis.md  change_classifier_results.md  delta_luminance_results.md  tfr_comparison_results.md
research_diary/reports/: 04_2_diario_tareas.html
research_diary/slack/: slack_diego_2026-04-09.md  (+1 more)
scripts/: class_tables_output.txt  eeg_tfr.py  export_report_to_html.py  extract_luminance_from_videos.py  temp_generate_class_tables.py
scripts/glhmm/: test_glhmm.py  (+1 more)
src/: __init__.py
stimuli/: video_durations.csv
tests/: conftest.py  test_baseline_models.py  test_class_balancing.py  test_covariance_features.py  test_cross_correlation.py  test_delta_luminance.py  test_duration_correction.py  test_eeg.py  test_eeg_qa.py  test_erp_analysis.py  test_evaluation_metrics.py  test_luminance_explore.py  test_luminance_features.py  test_luminance_normalization.py  test_luminance_permutation.py  test_luminance_pipeline.py  test_luminance_sync.py  test_pca_sweep.py  test_raw_tde_model.py
(+549 files in other folders)
