[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "campeones_analysis"
version = "0.1.0"
description = "Reproducible pipeline for immersive emotion experiment data (EEG + peripheral measures) with Python"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "mne>=1.5.0",
    "mne-bids>=0.13.0",
    "pyxdf>=1.16.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
    "neurokit2>=0.2.0",
    "autoreject>=0.4.0",
    "pyprep>=0.4.0",
    "mne-icalabel>=0.4.0",
    "gitpython>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "mkdocs",
    "mkdocs-material>=9.0.0"
]
